Added some translations
* Added some translations and corrected minor errors in materialverwaltung.html

--- a/src/main/resources/langs/messages.properties
+++ b/src/main/resources/langs/messages.properties
@@ -1,16 +1,15 @@
-Benutzername=Username
-Passwort=Passwort
-Login=Anmelden
-Materialverwaltung=Materialverwaltung
-Materialeingabe=Materialeingabe
-Veranstaltung=Veranstaltung
-Veranstaltung_erstellen=Veranstaltung erstellen
-Typen=
-Einheitentyp=Einheitentyp
-Mitarbeitertyp=Mitarbeitertyp
-Materialtyp=Materialtyp
-Lagerstandort=Lagerstandort
-Konto=Konto
-Benutzerregistrierung=Benutzerregistrierung
-Passwort_aendern=Passwort aendern
-Sign_out=Abmelden
+benutzername=Benutzername
+passwort=Passwort
+materialverwaltung=Materialverwaltung
+materialeingabe=Materialeingabe
+veranstaltung=Veranstaltung
+veranstaltung_erstellen=Veranstaltung erstellen
+typen=
+eEinheitentyp=Einheitentyp
+mitarbeitertyp=Mitarbeitertyp
+materialtyp=Materialtyp
+lagerstandort=Lagerstandort
+konto=Konto
+benutzerregistrierung=Benutzerregistrierung
+passwort_aendern=Passwort aendern
+sign_out=Abmelden
