--- a/src/main/resources/langs/messages_en.properties
+++ b/src/main/resources/langs/messages_en.properties
@@ -1,16 +1,15 @@
-Benutzername=Username
-Passwort=Password
-Login=Log In
-Materialverwaltung=
-Materialeingabe=
-Veranstaltung=Event
-Veranstaltung_erstellen=Create Event
-Typen=Types
-Einheitentyp=
-Mitarbeitertyp=
-Materialtyp=Type of Material
-Lagerstandort=
-Konto=Account
-Benutzerregistrierung=User registration
-Passwort_aendern=Change Password
-Sign_out=Sign out
+benutzername=Username
+passwort=Password
+materialverwaltung=
+materialeingabe=
+veranstaltung=Event
+veranstaltung_erstellen=Create Event
+typen=Types
+einheitentyp=
+mitarbeitertyp=
+materialtyp=Type of Material
+lagerstandort=
+konto=Account
+benutzerregistrierung=User registration
+passwort_aendern=Change Password
+sign_out=Sign out
