Internationalization of calendar
* Added internationalization of calendar

--- a/src/main/resources/langs/messages.properties
+++ b/src/main/resources/langs/messages.properties
@@ -13,3 +13,6 @@ konto=Konto
 benutzerregistrierung=Benutzerregistrierung
 passwort_aendern=Passwort aendern
 sign_out=Abmelden
+calendar.list_day=Tagesanzeige
+calendar.list_week=Wochenanzeige
+calendar.list_month=Monatsanzeige
