--- a/src/main/resources/langs/messages_en.properties
+++ b/src/main/resources/langs/messages_en.properties
@@ -13,3 +13,6 @@ konto=Account
 benutzerregistrierung=User registration
 passwort_aendern=Change Password
 sign_out=Sign out
+calendar.list_day=list day
+calendar.list_week=list week
+calendar.list_month=list month
