--- a/src/main/resources/langs/messages_fr.properties
+++ b/src/main/resources/langs/messages_fr.properties
@@ -1,2 +1,5 @@
 benutzername=l'identifiant
 konto=le Compte
+calendar.list_day=list day
+calendar.list_week=list week
+calendar.list_month=list month
