--- a/src/main/resources/langs/messages.properties
+++ b/src/main/resources/langs/messages.properties
@@ -5,7 +5,7 @@ materialeingabe=Materialeingabe
 veranstaltung=Veranstaltung
 veranstaltung_erstellen=Veranstaltung erstellen
 typen=
-eEinheitentyp=Einheitentyp
+einheitentyp=Einheitentyp
 mitarbeitertyp=Mitarbeitertyp
 materialtyp=Materialtyp
 lagerstandort=Lagerstandort
@@ -16,3 +16,4 @@ sign_out=Abmelden
 calendar.list_day=Tagesanzeige
 calendar.list_week=Wochenanzeige
 calendar.list_month=Monatsanzeige
+mitarbeiterverwaltung.active=Aktiv ( Tick ) / Passiv
