--- a/src/main/resources/langs/messages_en.properties
+++ b/src/main/resources/langs/messages_en.properties
@@ -16,3 +16,4 @@ sign_out=Sign out
 calendar.list_day=list day
 calendar.list_week=list week
 calendar.list_month=list month
+mitarbeiterverwaltung.active=Active ( Tick ) / Passive
