--- a/src/main/resources/langs/messages.properties
+++ b/src/main/resources/langs/messages.properties
@@ -1,4 +1,6 @@
+anzeigename=Anzeigename
 benutzername=Benutzername
+dienstnummer=Dienstnummer
 passwort=Passwort
 materialverwaltung=Materialverwaltung
 materialeingabe=Materialeingabe
