--- a/src/main/resources/langs/messages_en.properties
+++ b/src/main/resources/langs/messages_en.properties
@@ -1,4 +1,6 @@
-benutzername=Username
+anzeigename=display name
+benutzername=user name
+dienstnummer=employee
 passwort=Password
 materialverwaltung=
 materialeingabe=
