CSS/HTML next part
* edited/changed minor subjects
* first look on error pages

--- a/src/main/resources/langs/messages_en.properties
+++ b/src/main/resources/langs/messages_en.properties
@@ -13,7 +13,7 @@ materialtyp=Type of Material
 lagerstandort=
 konto=Account
 benutzerregistrierung=User registration
-passwort_aendern=Change Password
+passwort_aendern=change password
 sign_out=Sign out
 calendar.list_day=list day
 calendar.list_week=list week
