edited error and fragments
* refactored error.html to 500.html
* removed fragment\topnav.html and \fragment\footer.html
* added Button 'mitarbeiter erstellen' to mitarbeiterverwaltung.html

--- a/src/main/resources/langs/messages.properties
+++ b/src/main/resources/langs/messages.properties
@@ -9,6 +9,7 @@ veranstaltung_erstellen=Veranstaltung erstellen
 typen=
 einheitentyp=Einheitentyp
 mitarbeitertyp=Mitarbeitertyp
+mitarbeiter_erstellen= Mitarbeiter erstellen
 materialtyp=Materialtyp
 lagerstandort=Lagerstandort
 konto=Konto
