--- a/src/main/resources/langs/messages_en.properties
+++ b/src/main/resources/langs/messages_en.properties
@@ -9,6 +9,7 @@ veranstaltung_erstellen=Create Event
 typen=Types
 einheitentyp=
 mitarbeitertyp=
+mitarbeiter_erstellen= create user
 materialtyp=Type of Material
 lagerstandort=
 konto=Account
