Added / Deleted some translations
* Added some translations
* Deleted french translation

--- a/src/main/resources/langs/messages.properties
+++ b/src/main/resources/langs/messages.properties
@@ -20,3 +20,4 @@ calendar.list_day=Tagesanzeige
 calendar.list_week=Wochenanzeige
 calendar.list_month=Monatsanzeige
 mitarbeiterverwaltung.active=Aktiv ( Tick ) / Passiv
+mitarbeiterverwaltung.status=Der Benutzerstatus wurde erfolgreich geändert
