--- a/src/main/resources/langs/messages_en.properties
+++ b/src/main/resources/langs/messages_en.properties
@@ -20,3 +20,4 @@ calendar.list_day=list day
 calendar.list_week=list week
 calendar.list_month=list month
 mitarbeiterverwaltung.active=Active ( Tick ) / Passive
+mitarbeiterverwaltung.status=The user status was successfully changed.
